--- a/less/style.less
+++ b/less/style.less
@@ -217,6 +217,13 @@ html {
 		}
 
 		.links {
+			display: flex;
+			margin-top: 2em;
+
+			@media (max-width: @screen-sm-max) {
+				display: block;
+			}
+
 			.link {
 				.main-link();
 			}
@@ -272,11 +279,12 @@ html {
 	@color: #369;
 	@text: #fff;
 
-	display: inline-block;
+	flex: 0 0 33.33333%;
+	display: block;
 	background: @color;
 	color: @text;
-	font-size: 1em;
-	padding: 0.75em;
+	font-size: 0.9em;
+	padding: 0.75em 0.75em 0.75em 0.5em;
 	white-space: nowrap;
 	vertical-align: middle;
 	line-height: 1.3;
@@ -284,6 +292,7 @@ html {
 	border-radius: 10px;
 	box-shadow: 0 0.25em 0 0 darken(@color, 10%);
 	transition: transform 0.2s, box-shadow 0.2s;
+	margin-right: 10px;
 
 	img {
 		display: inline-block;
