--- a/less/style.less
+++ b/less/style.less
@@ -284,10 +284,10 @@ html {
 	background: @color;
 	color: @text;
 	font-size: 0.9em;
-	padding: 0.75em 0.75em 0.75em 0.5em;
+	padding: 0 0.75em;
 	white-space: nowrap;
 	vertical-align: middle;
-	line-height: 1.3;
+	line-height: 2.5;
 	text-decoration: none;
 	border-radius: 10px;
 	box-shadow: 0 0.25em 0 0 darken(@color, 10%);
@@ -297,11 +297,12 @@ html {
 	img {
 		display: inline-block;
 		vertical-align: middle;
-		padding: 0 0.25em;
+		height: 1.5em;
 	}
 
-	img, .fa {
-		width: 2em;
+	.logo-img, .fa {
+		display: inline-block;
+		width: 2.5em;
 		text-align: center;
 	}
 
