--- a/less/style.less
+++ b/less/style.less
@@ -241,7 +241,7 @@ html {
 	border: 1px solid #ddd;
 	border-width: 1px 0px;
 	font-size: 0.9em;
-	padding: 1em 1.25em;
+	padding: 1em 1.25em 1em 0;
 	text-decoration: none;
 	transition: background-color 0.35s, color 0.35s, border-color 0.25s;
 
