--- a/less/style.less
+++ b/less/style.less
@@ -241,6 +241,7 @@ html {
 	color: #444;
 	background: #f1f1f1;
 	border: 1px solid #ddd;
+	border-bottom-color: #555;
 	border-width: 1px 0px;
 	font-size: 0.9em;
 	padding: 1em 1.25em 1em 0;
