--- a/less/style.less
+++ b/less/style.less
@@ -278,7 +278,7 @@ html {
 	background: #565656;
 	color: #fff;
 	font-size: 0.9em;
-	padding: 0 0.75em;
+	padding: 0.5em 0.75em;
 	white-space: nowrap;
 	vertical-align: middle;
 	line-height: 2.5;
