--- a/less/style.less
+++ b/less/style.less
@@ -72,6 +72,7 @@ html {
 
 	.top {
 		display: flex;
+		width: 100%;
 		align-items: center;
 		min-height: 400px;
 
@@ -233,7 +234,7 @@ html {
 }
 
 .bottom-link() {
-	flex: 1 0 0;
+	flex: 1 0 auto;
 	display: inline-block;
 	white-space: nowrap;
 	text-align: center;
