--- a/less/style.less
+++ b/less/style.less
@@ -5,7 +5,8 @@
 @cutoff: 750px;
 
 @titleFont: "Bungee", sans-serif;
-@bodyFont: "Roboto", sans-serif;
+// @bodyFont: "Roboto", sans-serif;
+@bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
 html {
 	font-size: 17px;
