--- a/less/style.less
+++ b/less/style.less
@@ -186,6 +186,7 @@ html {
 			line-height: 1.1;
 			font-family: @titleFont;
 			font-weight: 400;
+			user-select: none;
 		}
 
 		.title {
@@ -197,9 +198,19 @@ html {
 			margin-bottom: 1.5em;
 			font-family: @bodyFont;
 			font-weight: 300;
+			user-select: none;
 
 			span {
 				white-space: nowrap;
+
+				&:after {
+					content:"·";
+					margin: 0 0.25em;
+				}
+
+				&:last-child:after {
+					display: none;
+				}
 			}
 		}
 
@@ -216,6 +227,15 @@ html {
 
 			.title {
 				font-size: 1.5em;
+
+				span {
+					display: block;
+					line-height: 1.3;
+
+					&:after {
+						display: none;
+					}
+				}
 			}
 		}
 
