--- a/less/style.less
+++ b/less/style.less
@@ -4,7 +4,7 @@
 @screen-sm-max: 500px;
 @cutoff: 750px;
 
-@titleFont: "Bungee", sans-serif;
+// @titleFont: "Bungee", sans-serif;
 // @bodyFont: "Roboto", sans-serif;
 @bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
@@ -184,8 +184,8 @@ html {
 			margin: 0;
 			font-size: 3em;
 			line-height: 1.1;
-			font-family: @titleFont;
-			font-weight: 400;
+			font-weight: 900;
+			text-transform: uppercase;
 			user-select: none;
 		}
 
