Refactoring config stuff

--- a/less/style.less
+++ b/less/style.less
@@ -1,11 +1,11 @@
 @import (inline) "../node_modules/normalize.css/normalize.css";
+@import "../node_modules/font-awesome/less/font-awesome.less";
 
+@fa-font-path: "/fonts";
 @screen-md-max: 1000px;
 @screen-sm-max: 500px;
 @cutoff: 750px;
 
-// @titleFont: "Bungee", sans-serif;
-// @bodyFont: "Roboto", sans-serif;
 @bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
 html {
