Back to a custom font for name

--- a/less/style.less
+++ b/less/style.less
@@ -7,6 +7,7 @@
 @cutoff: 750px;
 
 @bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+@titleFont: Quicksand, @bodyFont;
 
 html {
 	font-size: 17px;
@@ -187,6 +188,7 @@ html {
 			font-weight: 900;
 			text-transform: uppercase;
 			user-select: none;
+			font-family: @titleFont;
 		}
 
 		.title {
