--- a/less/style.less
+++ b/less/style.less
@@ -262,12 +262,11 @@ html {
 	white-space: nowrap;
 	text-align: center;
 	color: #565656;
-	border: 1px solid #555;
-	border-width: 1px 0px 0px 1px;
+	border-bottom: 1px solid #fff;
 	font-size: 0.9em;
 	padding: 1em 1.25em 1em 0;
 	text-decoration: none;
-	transition: background-color 0.35s, color 0.35s, border-color 0.25s;
+	transition: color 0.35s, border-color 0.35s;
 
 	&:first-child {
 		border-left-width: 0;
@@ -279,8 +278,8 @@ html {
 	}
 
 	&:hover {
-		background: @bg;
-		color: #fff;
+		border-bottom: 1px solid @bg;
+		color: @bg;
 	}
 
 	@media (max-width: @cutoff) {
