WIP, merging in resume changes.

--- a/less/main.less
+++ b/less/main.less
@@ -1,7 +1,6 @@
 @import (inline) "../node_modules/normalize.css/normalize.css";
-@import "../node_modules/font-awesome/less/font-awesome.less";
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css";
 
-@fa-font-path: "/fonts";
 @screen-md-max: 1000px;
 @screen-sm-max: 500px;
 @cutoff: 750px;
