--- a/less/main.less
+++ b/less/main.less
@@ -1,5 +1,5 @@
 @import (inline) "../node_modules/normalize.css/normalize.css";
-@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css";
+@import (css) "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css";
 
 @screen-md-max: 1000px;
 @screen-sm-max: 500px;
