--- a/less/resume.less
+++ b/less/resume.less
@@ -58,17 +58,18 @@ html {
 
 html {
 	font-size: 14px;
-	background: #f9f9f9;
 }
 
 body {
 	font-family: @normalFont;
 	color: @normalColor;
 	line-height: 1.5;
+	background-color: #f9f9f9;
 }
 
 .block {
 	page-break-inside: avoid;
+	// border: 1px solid black;
 }
 
 #content {
@@ -76,7 +77,6 @@ body {
 	margin: 0.5em auto;
 
 	.container {
-		// padding: 0.25in 1in;
 		.clearfix;
 
 		h2 {
@@ -241,7 +241,7 @@ body {
 	}
 }
 
-#print_footer {
+#print-footer {
 	display: none;
 }
 
