--- a/less/resume.less
+++ b/less/resume.less
@@ -1,17 +1,10 @@
 @import (inline) "../node_modules/normalize.css/normalize.css";
 
-.font-face(@name, @filename, @path) {
-	@font-face {
-	    font-family: @name;
-	    src: url('@{path}/@{filename}-webfont.eot');
-	    src: url('@{path}/@{filename}-webfont.eot?#iefix') format('embedded-opentype'),
-	         url('@{path}/@{filename}-webfont.woff') format('woff'),
-	         url('@{path}/@{filename}-webfont.ttf') format('truetype'),
-	         url('@{path}/@{filename}-webfont.svg#@{name}') format('svg');
-	    font-weight: normal;
-	    font-style: normal;
-	}
-}
+@bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+@titleFont: Quicksand, @bodyFont;
+@normalColor: #222;
+@headerColor: desaturate(#369, 20%);
+@linkColor: @headerColor;
 
 .text-shadow (@color, @x, @y, @blur) {
 	text-shadow: @color @x @y @blur;
@@ -42,12 +35,6 @@
 	& { display: block; }
 }
 
-@normalColor: #222;
-@headerColor: desaturate(#369, 20%);
-@linkColor: @headerColor;
-@normalFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-@headerFont: 'Oswald', sans-serif;
-
 html {
 	box-sizing: border-box;
 }
@@ -61,7 +48,7 @@ html {
 }
 
 body {
-	font-family: @normalFont;
+	font-family: @bodyFont;
 	color: @normalColor;
 	line-height: 1.5;
 	background-color: #f9f9f9;
@@ -103,25 +90,25 @@ body {
 		}
 
 		h1 {
-			font-family: @headerFont;
+			font-family: @titleFont;
+			font-weight: 700;
 			color: @headerColor;
 			text-transform: uppercase;
 			text-align: center;
 			font-size: 4.5em;
 			line-height: 1.5;
 			margin: 0.25em 0;
-			font-weight: 600;
 		}
 
 		h3 {
-			font-family: @headerFont;
+			font-family: @titleFont;
+			font-weight: 500;
 			color: @headerColor;
 			font-size: 2em;
 			line-height: 1.5;
 			text-transform: uppercase;
 			border-bottom: 1px solid #bbb;
 			margin: 0.5em 0px;
-			font-weight: 600;
 		}
 
 		a {
