--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:500,700" rel="stylesheet">
 
 	<meta name="keywords" content="jimmy, sawczuk, james, resume, php, html, css, mysql, mongodb, developer, software, engineer, go, programmer" />
-	<meta name="description" content="The professional resume of James J. (Jimmy) Sawczuk, a software engineer who currently lives and works in Charlotte, NC." />
+	<meta name="description" content="The professional resume of James J. (Jimmy) Sawczuk, a software engineer who currently lives and works in Rock Hill, SC." />
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -68,7 +68,7 @@
 					</div>
 
 					<div class="city">
-						Charlotte, NC
+						Fort Mill, SC
 					</div>
 
 					<div class="title">
