--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -29,9 +29,9 @@
 			<div class="top">
 				<div class="img">
 					<picture>
-						<source srcset="/img/headshot.webp" type="image/webp" />
-						<source srcset="/img/headshot.jpg" type="image/jpeg" />
-						<img src="/img/headshot.jpg" alt="Jimmy Sawczuk" />
+						<source srcset="{{ asset "/img/headshot.webp" }}" type="image/webp" />
+						<source srcset="{{ asset "/img/headshot.jpg" }}" type="image/jpeg" />
+						<img src="{{ asset "/img/headshot.jpg" }}" alt="Jimmy Sawczuk" />
 					</picture>
 				</div>
 				<div class="details">
