--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -25,7 +25,7 @@
 	<div id="content">
 		<div class="container">
 			<h2>
-				<span class="line line-block">PO Box 6495 <span class="dot">&middot;</span> Columbia, SC 29260</span>
+				<span class="line line-block">PO Box 142 <span class="dot">&middot;</span> Fort Mill, SC 29716</span>
 				<span class="line"><b>phone</b> (440) 796-7806</span>
 				<span class="dot">&middot;</span>
 				<span class="line"><b>e-mail</b> <a href="mailto:me@jimmysawczuk.com" target="_blank">me@jimmysawczuk.com</a></span>
