--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>James J. Sawczuk - Software Engineer</title>
 
-	<link href="{{ asset "/build/resume.css" }}" rel="stylesheet" type="text/css" />
+	<link href="{{ asset "/dist/resume.css" }}" rel="stylesheet" type="text/css" />
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:500,700" rel="stylesheet">
 
 	<meta name="keywords" content="jimmy, sawczuk, james, resume, php, html, css, mysql, mongodb, developer, software, engineer, go, programmer" />
@@ -258,6 +258,6 @@
 		</div>
 	</div>
 
-	<script src="{{ asset "/build/resume.js" }}" async></script>
+	<script src="{{ asset "/dist/resume.js" }}" async></script>
 </body>
 </html>
