Adding some Red Ventures experience

--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -75,7 +75,13 @@
 						Senior Software Engineer
 					</div>
 
-					<ul class="extra"></ul>
+					<ul class="extra">
+						<li>Developed an API in Go for an internal system for doctors to update their credentials</li>
+						<li>Prototyped a command-line tool in Go to synchronize logic changes between CDN environments</li>
+						<li>Led the development of and architected large portions of a search and scheduling API for a major health provider network, as part of the company's leap into healthcare</li>
+						<li>Helped to formalize strategies on the backend team for using source control effectively, as well as for collaborating with the frontend team</li>
+						<li>Mentored other engineers on the team, participated in code reviews and helped teammates debug problems</li>
+					</ul>
 				</div>
 
 				<div class="experience">
@@ -188,11 +194,11 @@
 				<h3>Skills</h3>
 				<div class="normal_list">
 					<ul>
-						<li><b>Programming languages:</b> Extensive experience with Go, PHP (standard and MVC paradigms, Laravel framework), Javascript/jQuery (some Backbone.js, React, ES6); experience in C#, shell scripting</li>
-						<li><b>APIs:</b> Extensive experience with the Facebook platform (Graph API, Canvas apps); experience with the Twitter, Github API</li>
+						<li><b>Programming languages:</b> Extensive experience with Go, PHP (standard and MVC paradigms, Laravel framework), Javascript/jQuery (some Backbone.js, React, Vue, ES6); experience in C#, shell scripting</li>
 						<li><b>Databases:</b> Extensive experience with MySQL and SQL Server development/optimization; some experience with Redis, MongoDB, MySQL administration</li>
+						<li><b>APIs:</b> Extensive experience with the Facebook platform (Graph API, Canvas apps); experience with the Twitter, Github API</li>
 						<li><b>Operating Systems:</b> Extensive experience with Windows 98 through Windows 10, macOS; experience in Linux (desktop, terminal, and programming)</li>
-						<li><b>Other technology:</b> Experience with Subversion, Mercurial, Git, and CVS version control, Memcache, Redis, Amazon AWS</li>
+						<li><b>Other technology:</b> Extensive experience with Amazon AWS (EC2, ECS, S3, some Lambda, some Cloudfront), Git; experience with Kubernetes, Cloudflare, Subversion, Mercurial, and CVS version control, Memcache, Redis</li>
 					</ul>
 				</div>
 			</div>
