--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -60,7 +60,7 @@
 				<h3>Experience</h3>
 				<div class="experience">
 					<div class="dates">
-						Sept. 2017 - present
+						Sept. 2017 – present
 					</div>
 
 					<div class="company">
