--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -39,20 +39,20 @@
 					<h2 class="title"><span>Software Engineer</span><span>Rock Hill, SC</span></h2>
 
 					<div class="links">
-						<a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank"><i class="fa fa-envelope-open-o"></i> E-mail</a>
+						<a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank"><i class="fal fa-envelope-open fa-fw"></i> E-mail</a>
 						<a href="https://section411.com" class="link section411" target="_blank"><div class="logo-img"><img src="/img/section411-logo.png" /></div> Section 411</a>
-						<a href="/resume" class="link resume" target="_blank"><i class="fa fa-id-card-o"></i> Résumé</a>
+						<a href="/resume" class="link resume" target="_blank"><i class="fal fa-id-card fa-fw"></i> Résumé</a>
 					</div>
 				</div>
 			</div>
 			<div class="bottom">
 				<div class="links">
-					<a href="https://facebook.com/jimmysawczuk" class="link fb" target="_blank"><i class="fa fa-facebook"></i> Facebook</a>
-					<a href="https://twitter.com/jimmysawczuk" class="link tw" target="_blank"><i class="fa fa-twitter"></i> Twitter</a>
-					<a href="https://instagram.com/jimmysawczuk" class="link instagram" target="_blank"><i class="fa fa-instagram"></i> Instagram</a>
-					<a href="https://linkedin.com/in/jimmysawczuk" class="link linkedin" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a>
-					<a href="https://plus.google.com/+jimmysawczuk" class="link googleplus" target="_blank"><i class="fa fa-google-plus"></i> Google+</a>
-					<a href="https://github.com/jimmysawczuk" class="link github" target="_blank"><i class="fa fa-github"></i> Github</a>
+					<a href="https://facebook.com/jimmysawczuk" class="link fb" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
+					<a href="https://twitter.com/jimmysawczuk" class="link tw" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+					<a href="https://instagram.com/jimmysawczuk" class="link instagram" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+					<a href="https://linkedin.com/in/jimmysawczuk" class="link linkedin" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+					<a href="https://plus.google.com/+jimmysawczuk" class="link googleplus" target="_blank"><i class="fab fa-google-plus-g"></i> Google+</a>
+					<a href="https://github.com/jimmysawczuk" class="link github" target="_blank"><i class="fab fa-github"></i> Github</a>
 				</div>
 			</div>
 		</div>
