--- a/less/main.less
+++ b/less/main.less
@@ -261,7 +261,7 @@ html {
 	text-align: center;
 	color: #565656;
 	border-bottom: 1px solid #fff;
-	font-size: 0.9em;
+	font-size: 1em;
 	padding: 1em 1.25em 1em 0;
 	text-decoration: none;
 	transition: color 0.35s, border-color 0.35s;
@@ -272,6 +272,7 @@ html {
 
 	.fa, .svg-inline--fa {
 		width: 1.5em;
+		margin-right: 0.5em;
 		text-align: center;
 	}
 
@@ -295,7 +296,12 @@ html {
 		float: none;
 		width: auto;
 		border-width: 1px 0px 0px;
-		padding: 1em 3.25em;
+		padding: 1em 2em;
+
+		.fa, .svg-inline--fa {
+			width: 2.5em;
+			margin: 0 0.75em;
+		}
 	}
 }
 
