--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -30,7 +30,7 @@
 				<div class="img">
 					<picture>
 						<source srcset="{{ asset "/img/headshot.webp" }}" type="image/webp" />
-						<source srcset="{{ asset "/img/headshot.jpg" }}" type="image/jpeg" />
+						<source srcset="{{ asset "/img/headshot-rounded.jpg" }}" type="image/jpeg" />
 						<img src="{{ asset "/img/headshot.jpg" }}" alt="Jimmy Sawczuk" />
 					</picture>
 				</div>
