--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -31,7 +31,7 @@
 					<picture>
 						<source srcset="{{ asset "/img/headshot.webp" }}" type="image/webp" />
 						<source srcset="{{ asset "/img/headshot-rounded.jpg" }}" type="image/jpeg" />
-						<img src="{{ asset "/img/headshot.jpg" }}" alt="Jimmy Sawczuk" />
+						<img src="{{ asset "/img/headshot-rounded.jpg" }}" alt="Jimmy Sawczuk" />
 					</picture>
 				</div>
 				<div class="details">
