--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -7,9 +7,10 @@
 	<title>Jimmy Sawczuk</title>
 	<link href="{{ asset "/dist/main.css" }}" type="text/css" rel="stylesheet" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="/manifest.json">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<meta name="msapplication-TileColor" content="#333333">
 	<meta name="theme-color" content="#ffffff">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
 	<script>
