--- a/less/resume.less
+++ b/less/resume.less
@@ -24,15 +24,10 @@
 
 .clearfix() {
 	&:after {
-	 	content: ".";
 		display: block;
-		height: 0;
+		content: "";
 		clear: both;
-		visibility: hidden;
 	}
-
-	& { display:inline-block; }
-	& { display: block; }
 }
 
 html {
