Change telegram icon

--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -50,7 +50,7 @@
 				<div class="links">
 					<a href="https://facebook.com/jimmysawczuk" class="link fb" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
 					<a href="https://twitter.com/jimmysawczuk" class="link tw" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
-					<a href="https://t.me/jimmysawczuk" class="link tg" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
+					<a href="https://t.me/jimmysawczuk" class="link tg" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a>
 					<a href="https://instagram.com/jimmysawczuk" class="link instagram" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
 					<a href="https://linkedin.com/in/jimmysawczuk" class="link linkedin" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
 					<a href="https://github.com/jimmysawczuk" class="link github" target="_blank"><i class="fab fa-github"></i> Github</a>
