Moving some stuff around

--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -7,6 +7,7 @@
 	<title>James J. Sawczuk - Software Engineer</title>
 
 	<link href="{{ asset "/dist/resume.css" }}" rel="stylesheet" type="text/css" />
+	<script src="{{ asset "/dist/resume.js" }}" defer></script>
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:500,700" rel="stylesheet">
 
 	<meta name="keywords" content="jimmy, sawczuk, james, resume, php, html, css, mysql, mongodb, developer, software, engineer, go, programmer" />
@@ -262,7 +263,5 @@
 			Printed on <span id="print-date"></span>
 		</div>
 	</div>
-
-	<script src="{{ asset "/dist/resume.js" }}" async></script>
 </body>
 </html>
