--- a/less/main.less
+++ b/less/main.less
@@ -19,17 +19,10 @@ html {
 }
 
 body {
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: top center;
 	font-family: @bodyFont;
 	font-weight: 300;
 	color: #222;
-
-	@media (max-width: @cutoff) {
-		background-image: none;
-		background-position: center;
-	}
+	background-color: #f9f9f9;
 }
 
 // apply a natural box layout model to all elements, but allowing components to change
@@ -261,7 +254,7 @@ html {
 	white-space: nowrap;
 	text-align: center;
 	color: #565656;
-	border-bottom: 1px solid #fff;
+	border-bottom: 1px solid transparent;
 	font-size: 1em;
 	padding: 1em 1.25em 1em 0;
 	text-decoration: none;
