Use duotone icons. Yay!

--- a/less/main.less
+++ b/less/main.less
@@ -323,7 +323,18 @@ html {
 		height: 1.1em;
 	}
 
-	.logo-img,
+	.logo-img {
+		display: inline-block;
+		width: 2.5em;
+		text-align: center;
+		margin-right: 0.5em;
+		font-size: 1.1em;
+
+		img {
+			background: fadeOut(#fff, 60%);
+		}
+	}
+
 	.fa,
 	.svg-inline--fa {
 		display: inline-block;
