--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -41,9 +41,9 @@
 					<h2 class="title"><span>Software Engineer</span><span>Rock Hill, SC</span></h2>
 
 					<div class="links">
-						<a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank"><i class="fal fa-envelope-open fa-fw"></i> E-mail</a>
+						<a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank"><i class="fad fa-envelope-open fa-fw"></i> E-mail</a>
 						<a href="https://section411.com" class="link section411" target="_blank"><div class="logo-img"><img src="/img/section411-logo.png" /></div> Section 411</a>
-						<a href="/resume" class="link resume" target="_blank"><i class="fal fa-id-card fa-fw"></i> Résumé</a>
+						<a href="/resume" class="link resume" target="_blank"><i class="fad fa-id-card fa-fw"></i> Résumé</a>
 					</div>
 				</div>
 			</div>
