--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -80,8 +80,10 @@
 						<li>Developed an API in Go for an internal system for doctors to update their credentials</li>
 						<li>Prototyped a command-line tool in Go to synchronize logic changes between CDN environments</li>
 						<li>Led the development of and architected large portions of a search and scheduling API for a major health provider network, as part of the company's leap into healthcare</li>
-						<li>Helped to formalize strategies on the backend team for using source control effectively, as well as for collaborating with the frontend team</li>
-						<li>Mentored other engineers on the team, participated in code reviews and helped teammates debug problems</li>
+						<li>Architected a modern backend for a travel product we acquired, helping to migrate from a Java-based monolith to a more modular, cloud-native approach</li>
+						<li>Helped to architect and led the development of a national physician finder, a core </li>
+						<li>Helped to develop and formalize our version control strategy, and implemented documentation and contracts that let us collaborate asynchronously with the frontend engineering team</li>
+						<li>Served as a mentor to many other engineers: reviewed code, assisted in debugging and gave advice on how to move forward in their careers</li>
 					</ul>
 				</div>
 
@@ -104,7 +106,6 @@
 
 					<ul class="extra">
 						<li>Developed highly-scalable web applications using a LAMP stack deployed on Amazon EC2</li>
-						<li>Used a number of other technologies such as memcache, Redis, and node.js in production</li>
 						<li>Spearheaded the development of a business pivot to Facebook Page audience analytics</li>
 						<li>Prototyped most of the analytics algorithms and systems used in the company</li>
 						<li>Listed as a co-inventor of utility patent #9,842,349, "System and method for preference determination."</li>
@@ -137,8 +138,6 @@
 					</div>
 
 					<ul class="extra">
-						<li>Made recommendations for hardware and software upgrades for various clients</li>
-						<li>Worked with other engineers to standardize a network monitoring system</li>
 						<li>Created custom, data-driven applications for various clients</li>
 						<li>Gained experience in .NET development, report development and handheld development</li>
 						<li>Worked with other developers to standardize practices including application deployment techniques, version control management, and product testing standards</li>
@@ -195,11 +194,12 @@
 				<h3>Skills</h3>
 				<div class="normal_list">
 					<ul>
-						<li><b>Programming languages:</b> Extensive experience with Go, PHP (standard and MVC paradigms, Laravel framework), Javascript/jQuery (some Backbone.js, React, Vue, ES6); experience in C#, shell scripting</li>
-						<li><b>Databases:</b> Extensive experience with MySQL and SQL Server development/optimization; some experience with Redis, MongoDB, MySQL administration</li>
+						<li><b>Programming languages:</b> Extensive experience with Go, PHP (standard and MVC paradigms, Laravel framework), Javascript (ES6, Vue, jQuery, some React; some experience with C#, shell scripting</li>
+						<li><b>Infrastructure:</b> Extensive experience with Amazon AWS (EC2, ECS, S3, Lambda, some API Gateway, some Cloudfront, some Kinesis), Terraform</li>
+						<li><b>Databases:</b> Extensive experience with MySQL and SQL Server development/optimization, Redis; some experience with MongoDB, DynamoDB, MySQL administration</li>
 						<li><b>APIs:</b> Extensive experience with the Facebook platform (Graph API, Canvas apps); experience with the Twitter, Github API</li>
-						<li><b>Operating Systems:</b> Extensive experience with Windows 98 through Windows 10, macOS; experience in Linux (desktop, terminal, and programming)</li>
-						<li><b>Other technology:</b> Extensive experience with Amazon AWS (EC2, ECS, S3, some Lambda, some Cloudfront), Git; experience with Kubernetes, Cloudflare, Subversion, Mercurial, and CVS version control, Memcache, Redis</li>
+						<li><b>Operating Systems:</b> Extensive experience with Windows 98 through Windows 10, macOS; experience with Linux (desktop, terminal, and programming)</li>
+						<li><b>Other technology:</b> Extensive experience with Git; experience with Kubernetes, Cloudflare, Subversion, Mercurial, and CVS version control, Memcache, Redis</li>
 					</ul>
 				</div>
 			</div>
@@ -209,17 +209,16 @@
 				<div class="normal_list">
 					<ul>
 						<li>Created a small free-to-use blog website that operated for almost four years. Users were allowed to upload photos, write journal entries, etc. Source available upon request.</li>
-						<li>Created <a href="https://jimmysawczuk.github.io/less-tree">less-tree</a>, a program that intelligently batch compiles .less files to .css files.</li>
-						<li>Created <a href="https://section411.com">Section 411</a>, a blog on the <a href="http://gohugo.io">Hugo</a> platform with a theme designed from scratch.</li>
+						<li>Created <a href="https://section411.com">Section 411</a>, a blog on the <a href="http://gohugo.io">Hugo</a> platform with a theme designed from scratch.<ul>
+							<li>Published <a href="https://section411.com/2019/07/hello-world/">several</a> <a href="https://section411.com/2019/03/louvre-version-1.1/">technical</a> <a href="https://section411.com/2018/07/of-commits-and-containers/">posts</a></li>
+						</ul>
+						</li>
+						<li>Created <a href="https://louvre.io">Louvre</a>, an image manager that can resize and serve images</li>
 					</ul>
 				</div>
 
 				<div class="normal_list">
 					<ul>
-						<li>
-							<b><abbr title="Microsoft Certified Professional">MCP</abbr> ID</b>:
-							6635414
-						</li>
 						<li>
 							<b>Stack Overflow:</b>
 							<a href="http://www.stackoverflow.com/users/350278/jimmy-sawczuk">Jimmy Sawczuk</a>
